# autoscaffold-test-project

./: Makefile.am  configure.ac
build-aux/: source_common.mk  test_common.mk
sources/lib/: Makefile.am
tests/include/: TestHelper.hpp
