# sources/lib/Makefile.am

include $(top_srcdir)/build-aux/source_common.mk

SUBDIRS = \
 .

AM_LDFLAGS = $(LINKER_FLAGS)
AM_CPPFLAGS = $(COMPILE_FLAGS)

# noinst_HEADERS =
# noinst_LTLIBRARIES =
# lib_LTLIBRARIES =

# libFumaLibrary_la_SOURCES =
# libFumaLibrary_la_LIBADD  = $(LINKER_LIBS)

MAINTAINERCLEANFILES = \
 $(top_srcdir)/sources/lib/Makefile.in
